pgsql/pgadmin4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgsql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: pgadmin-data
          mountPath: /var/lib/pgadmin
      volumes:
      - name: pgadmin-data
        hostPath:
          path: /d/k8s/volumes/pgadmin4
          type: DirectoryOrCreate
